Atualização do Cartão de Personagem.
